--- a/Reviews-page/Thunderpick/Bonus/index.html
+++ b/Reviews-page/Thunderpick/Bonus/index.html
@@ -46,7 +46,13 @@
           {
             "@type": "ListItem",
             "position": 2,
-            "name": "Thunderpick Bonus",
+            "name": "Thunderpick",
+            "item": "https://www.all4wins.com/Reviews-page/Thunderpick/Bonus/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Thunderpick Bonuses",
             "item": "https://www.all4wins.com/Reviews-page/Thunderpick/Bonus/"
           }
         ]
