--- a/Reviews-page/TrustDice/Games/index.html
+++ b/Reviews-page/TrustDice/Games/index.html
@@ -44,6 +44,12 @@
           {
             "@type": "ListItem",
             "position": 2,
+            "name": "TrustDice ",
+            "item": "https://www.all4wins.com/Reviews-page/TrustDice/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
             "name": "TrustDice Games",
             "item": "https://www.all4wins.com/Reviews-page/TrustDice/Games/"
           }
