--- a/Reviews-page/Vave/Games/index.html
+++ b/Reviews-page/Vave/Games/index.html
@@ -46,6 +46,12 @@
           {
             "@type": "ListItem",
             "position": 2,
+            "name": "Vave Review",
+            "item": "https://www.all4wins.com/Reviews-page/Vave/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
             "name": "Vave Games",
             "item": "https://www.all4wins.com/Reviews-page/Vave/Games/"
           }
