--- a/Reviews-page/TrustDice/Bonus/index.html
+++ b/Reviews-page/TrustDice/Bonus/index.html
@@ -46,6 +46,12 @@
           {
             "@type": "ListItem",
             "position": 2,
+            "name": "TrustDice Review",
+            "item": "https://www.all4wins.com/Reviews-page/TrustDice/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
             "name": "TrustDice Bonus",
             "item": "https://www.all4wins.com/Reviews-page/TrustDice/Bonus/"
           }
