--- a/Reviews-page/Vave/Payments/index.html
+++ b/Reviews-page/Vave/Payments/index.html
@@ -47,6 +47,12 @@
           {
             "@type": "ListItem",
             "position": 2,
+            "name": "Vave Review",
+            "item": "https://www.all4wins.com/Reviews-page/Vave/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
             "name": "Vave Payments",
             "item": "https://www.all4wins.com/Reviews-page/Vave/Payments/"
           }
