--- a/Reviews-page/Wazamba/Bonus/index.html
+++ b/Reviews-page/Wazamba/Bonus/index.html
@@ -47,6 +47,12 @@
           {
             "@type": "ListItem",
             "position": 2,
+            "name": "Wazamba Review",
+            "item": "https://www.all4wins.com/Reviews-page/Wazamba/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
             "name": "Wazamba Bonus",
             "item": "https://www.all4wins.com/Reviews-page/Wazamba/Bonus/"
           }
