--- a/Reviews-page/Wild.io/Games/index.html
+++ b/Reviews-page/Wild.io/Games/index.html
@@ -47,6 +47,12 @@
           {
             "@type": "ListItem",
             "position": 2,
+            "name": "Wild.io Review",
+            "item": "https://www.all4wins.com/Reviews-page/Wild.io/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
             "name": "Wild.io Games",
             "item": "https://www.all4wins.com/Reviews-page/Wild.io/Games/"
           }
