--- a/Sports/index.html
+++ b/Sports/index.html
@@ -552,6 +552,33 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+                <!-- Only at Roobet - mrs clause 5m dollars-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/Roobet-Holiday-Rush-2025-Mrs-Claus-Unwraps-5M-USD-in-Prizes/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/mrs-clause-roobet-news.webp"
+                        width="300"
+                        height="200"
+                        alt="Mission Uncrossable Banner"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Mrs. Claus Unwraps $5,000,000 in Prizes – The Ultimate
+                        Holiday Casino Rush at Roobet <br />
+
+                        <strong>Offer expires on January 14th 2026</strong>
+                      </h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
 
                 <!-- rupy-->
                 <div class="news-item">
