--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -586,6 +586,33 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+                <!-- Only at Roobet - mrs clause 5m dollars-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/Roobet-Holiday-Rush-2025-Mrs-Claus-Unwraps-5M-USD-in-Prizes/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/mrs-clause-roobet-news.webp"
+                        width="300"
+                        height="200"
+                        alt="Mission Uncrossable Banner"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Mrs. Claus Unwraps $5,000,000 in Prizes – The Ultimate
+                        Holiday Casino Rush at Roobet <br />
+
+                        <strong>Offer expires on January 14th 2026</strong>
+                      </h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
 
                 <!-- mission uncrossable -->
                 <div class="news-item">
@@ -601,61 +628,6 @@
                     </div>
                     <div class="news-content">
                       <h2>Only at Roobet - <span>Mission Uncrossable</span></h2>
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!-- roobet holoween 2025-->
-                <div class="news-item">
-                  <a
-                    href="/News-Articles/Roobet-Casino-Spooky-Spins-and-Huge-Halloween-Wins/"
-                  >
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/roobet-2025-Halloween-news.webp"
-                        width="300"
-                        height="200"
-                        alt="roobet holloween 2025"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Halloween Casino Promotions | Roobet Crypto Casino
-                        Tournaments & $2M Slot Drops <br />
-                        <strong> Offer expires on 31st of October2025</strong>
-                      </h2>
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!--duelbits 2025 500 free spins-->
-                <div class="news-item">
-                  <a
-                    href="/News-Articles/Duelbits-Rookie-Rush-Welcome-Offer-Up-to-500-Free-Spins/"
-                  >
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/duelbits-500spins-news.webp"
-                        width="300"
-                        height="200"
-                        alt="ggbet-esl-bangkok-news"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Duelbits Rookie Rush Welcome Offer – Claim Up to 500
-                        Free Spins! <br />
-                        <strong> Offer expires on the 31st of October! </strong>
-                      </h2>
-
                       <div class="news-button">
                         <button>Read More</button>
                       </div>
@@ -760,34 +732,6 @@
                         Bonus + 50 Free Spins on Gates of Olympus <br />
 
                         <strong>Offer ongoing</strong>
-                      </h2>
-
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!--duelbits slots 500 fs-->
-                <div class="news-item">
-                  <a
-                    href="/News-Articles/Duelbits_Rookie_Rush–Up-to-500-Free-Spins-on-Slots/"
-                  >
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/duelbits-slots-500fs-news.webp"
-                        width="300"
-                        height="200"
-                        alt="ggbet-esl-bangkok-news"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Duelbits Rookie Rush – Up to 500 Free Spins on Slots
-                        <br />
-                        <strong> Offer expires on September 30th 2025 </strong>
                       </h2>
 
                       <div class="news-button">
