--- a/index.html
+++ b/index.html
@@ -347,6 +347,36 @@
                     </div>
                   </a>
                 </div>
+
+                <!--duelbits xmas 2025 offer-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/Duelbits-Christmas-Boosted-Welcome-Offer-500-Free-Spins-and-100-USD-Free-Bets/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/duelbits-xmas-wb-2025-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Duelbits Christmas Boosted Welcome Offer: Up to 500 Free
+                        Spins + $100 in Free Bets <br />
+
+                        <strong> Offer expires on December 31st 2025 </strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                
                 <!-- Only at Roobet - 100 Thieves-->
                 <div class="news-item">
                   <a
