--- a/Esports/index.html
+++ b/Esports/index.html
@@ -458,6 +458,36 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+
+                <!-- Only at Roobet - cs 2025-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/Roobet-Fuel-the-Comeback-at-the-Budapest-Major/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/roobet-cs-2025-news.webp"
+                        width="300"
+                        height="200"
+                        alt="Mission Uncrossable Banner"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Budapest Major - Double your Winnings up to $100 as a
+                        Free Bet <br />
+
+                        <strong>Offer expires on December 14th 2025</strong>
+                      </h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
+                <!-- roobet 100 thives -->
                 <div class="news-item">
                   <a
                     href="/News-Articles/Roobet-100-Thieves-The-Ultimate-Esports-Partnership/"
