--- a/Reviews-page/Wild.io/Payments/index.html
+++ b/Reviews-page/Wild.io/Payments/index.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Explore Wild.io casino for expert review, the latest bonus offers, and exclusive promotions. Discover top casinos and maximize your gaming experience with our detailed guides and insights."
+      content="Explore Wild.io’s payment methods, including fast deposits, easy withdrawals, supported currencies, and fees in this complete banking review."
     />
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
     <link
@@ -31,7 +31,7 @@
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
 
     <title>
-      Wild io Casino Review 2025 - WB 350% + 200 Free Spins and more!
+      Wild.io Payment Methods Review – Deposits, Withdrawals & Fees Explained
     </title>
 
     <script type="application/ld+json">
